fix: use db to fill in summary stats

--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "eslint-config-next": "14.0.0",
     "prisma": "^5.22.0",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
