fix: cleanup timeline

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ NEXTAUTH_URL="http://localhost:3000"
 
 # Application Settings
 NODE_ENV="development"
+
+# Upload Configuration
+# Directory where uploaded files (images, documents) will be stored
+# Default: public/uploads (relative to project root)
+UPLOADS_DIR="public/uploads"
