--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,10 @@ services:
       - NEXTAUTH_SECRET=your-production-secret-key-here
       - NEXTAUTH_URL=http://localhost:3000
       - NODE_ENV=production
+      - UPLOADS_DIR=/app/public/uploads
     volumes:
       - sqlite_data:/app/data
+      - uploads_data:/app/public/uploads
     restart: unless-stopped
 
   # PostgreSQL version (recommended for production)
@@ -27,8 +29,11 @@ services:
       - NEXTAUTH_SECRET=your-production-secret-key-here
       - NEXTAUTH_URL=http://localhost:3001
       - NODE_ENV=production
+      - UPLOADS_DIR=/app/public/uploads
     depends_on:
       - postgres
+    volumes:
+      - uploads_data:/app/public/uploads
     restart: unless-stopped
 
   postgres:
@@ -46,3 +51,4 @@ services:
 volumes:
   sqlite_data:
   postgres_data:
+  uploads_data:
