--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -33,8 +34,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
+    "jose": "^6.0.11",
     "lucide-react": "^0.525.0",
     "next": "14.0.0",
+    "next-auth": "^4.24.11",
     "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
