--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
-    "db:seed": "node prisma/seed.js"
+    "db:seed": "node prisma/seed.js",
+    "db:seed-initial-user": "node prisma/seed-initial-user.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
