--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
-    "db:seed": "node prisma/seed.js"
+    "db:seed": "node prisma/seed.js",
+    "db:seed-initial-user": "node prisma/seed-initial-user.js"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.10.0",
@@ -24,12 +29,16 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/bcryptjs": "^2.4.6",
     "autoprefixer": "^10.0.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
+    "jose": "^6.0.11",
     "lucide-react": "^0.525.0",
     "next": "14.0.0",
+    "next-auth": "^4.24.11",
     "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
