--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.10.0",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.11.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -49,6 +49,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "ulid": "^3.0.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
@@ -57,7 +58,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
-    "prisma": "^5.22.0",
+    "prisma": "^6.11.0",
     "typescript": "^5"
   },
   "prisma": {
