--- a/.github/workflows/docker-build-publish.yml
+++ b/.github/workflows/docker-build-publish.yml
@@ -117,10 +117,14 @@ jobs:
       security-events: write
 
     steps:
+      - name: Set Docker image tag
+        id: image_tag
+        run: echo "TAG=$(echo ${{ needs.build-and-push.outputs['steps.meta.outputs.tags'] }} | cut -d',' -f1)" >> $GITHUB_ENV
+
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ steps.push.outputs.digest }}
+          image-ref: ${{ env.TAG }}
           format: 'sarif'
           output: 'trivy-results.sarif'
 
