--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lucide-react": "^0.525.0",
     "next": "14.0.0",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
