--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.11.0",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcryptjs": "^2.4.6",
@@ -34,11 +37,13 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^2.30.0",
     "jose": "^6.0.11",
     "lucide-react": "^0.525.0",
     "next": "14.0.0",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
@@ -50,6 +55,7 @@
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "ulid": "^3.0.1",
+    "vaul": "^1.1.2",
     "zod": "^3.25.67"
   },
   "devDependencies": {
